z-index add button fixed

--- a/momentsAppMeteor.css
+++ b/momentsAppMeteor.css
@@ -90,4 +90,5 @@ button.remove {
   position: fixed;
   right: 30px;
   bottom: 30px;
+  z-index: 500;
 }
